envoy-session-persistance.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 12060 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: csr
                  hash_policy:
                    cookie:
                      name: csr_id
                      ttl: 30
          http_filters:
          - name: envoy.router
  clusters:
  - name: csr
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: RING_HASH
    hosts:
    - socket_address: { address: <my_ip>, port_value: 6001 }
    - socket_address: { address: <my_ip>, port_value: 7001 }
    - socket_address: { address: <my_ip>, port_value: 8001 }
